Fix dependency on libuvc-dev

--- a/libuvc_camera/package.xml
+++ b/libuvc_camera/package.xml
@@ -17,8 +17,7 @@
   <depend>camera_info_manager</depend>
   <depend>dynamic_reconfigure</depend>
   <depend>image_transport</depend>
-  <depend condition="$ROS_DISTRO != noetic">libuvc</depend>
-  <depend condition="$ROS_DISTRO == noetic">libuvc-dev</depend>
+  <depend>libuvc-dev</depend>
   <depend>nodelet</depend>
   <depend>sensor_msgs</depend>
 
