--- a/libuvc_camera/package.xml
+++ b/libuvc_camera/package.xml
@@ -18,6 +18,7 @@
   <depend>dynamic_reconfigure</depend>
   <depend>image_transport</depend>
   <depend>libuvc-dev</depend>
+  <depend>libusb-1.0-dev</depend>
   <depend>nodelet</depend>
   <depend>sensor_msgs</depend>
 
